# self-balancing-robot

./: .gitmodules  README.md  tmux_help.sh  tmux_session.sh
archive/teeterbot_listener/include/teeterbot_listener/: teeterbot_listener.h
literature/: the_dragon_song.txt
pid_controller/: CMakeLists.txt  package.xml
pid_controller/include/pid_controller/: helpers.h  pid_controller.h  pid_controller_ros_interface.h
pid_controller/launch/: pid_controller.launch
pid_controller/src/pid_controller/: CMakeLists.txt  helpers.cpp  main.cpp  pid_controller.cpp  pid_controller_ros_interface.cpp
teeterbot_controller/: CMakeLists.txt  package.xml
teeterbot_controller/launch/: controller.launch
teeterbot_controller/src/: teeterbot_controller.cpp
teeterbot_listener/: CMakeLists.txt  package.xml
teeterbot_listener/launch/: teeterbot_listener.launch
teeterbot_listener/src/teeterbot_listener/: CMakeLists.txt  main.cpp  teeterbot_listener.cpp
utils/docker/: DOCKER_README.md  Dockerfile  _launch_container.sh  docker_entrypoint.sh  launch.sh
utils/scripts/: aliases.sh  setup.bash
utils/self_balancing_robot_msgs/: CMakeLists.txt  package.xml
utils/self_balancing_robot_msgs/msg/: ControlError.msg  ControllerStatus.msg  PIDControlSignals.msg  PIDControllerInfo.msg
