<?xml version="1.0"?>

<package format="2">
  <name>pid_controller</name>
  <version>0.1.0</version>
  <description>PID controller for the teeterbot robot</description>
  <author email="michael.purser@outlook.be">Michael Purser</author>
  <maintainer email="michael.purser@outlook.be">Michael Purser</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
