<?xml version="1.0"?>

<package format="2">
  <name>self_balancing_robot_msgs</name>
  <version>0.1.0</version>
  <description>
    Message, service and action definitions for the self balancing robot.
  </description>
  <author email="michael.purser@outlook.be">Michael Purser</author>
  <maintainer email="michael.purser@outlook.be">Michael Purser</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
